# StreamlitAndDataScienceProject

cd/: pyproject.toml
cd/src/cd/: app.py
