[project]
name = "cd"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Bertuzzi de Oliveira",email = "159206426+Bertazz1@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "cd", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
